# nc-photos

./: .gitignore  README.md
.github/: FUNDING.yml
app/: l10n.yaml  pubspec.yaml
app/android/: .gitignore  build.gradle  settings.gradle
app/android/app/: build.gradle
app/lib/: account.dart  account.g.dart  app_init.dart  app_localizations.dart  bloc_util.dart  cache_manager_util.dart  cache_manager_util.g.dart  debug_util.dart  di_container.dart  download_handler.dart  exception.dart  exception_event.dart  exception_util.dart  file_extension.dart  file_view_util.dart  flutter_util.dart  geocoder_util.dart  gps_map_util.dart  help_utils.dart  internal_download_handler.dart  internal_download_handler.g.dart  jxl_util.dart  k.dart  language_util.dart  live_photo_util.dart  main.dart  notified_action.dart  np_api_util.dart  protected_page_handler.dart  session_storage.dart  set_as_handler.dart  share_handler.dart  snack_bar_manager.dart  stream_util.dart  suggester.dart  theme.dart  throttler.dart  touch_manager.dart  update_checker.dart
app/lib/api/: api_util.dart  entity_converter.dart
app/lib/bloc/: ls_dir.dart  (+13 more)
app/test/: account_test.dart  debug_util_test.dart  mock_type.dart  snack_bar_manager_test.dart  test_compat_util.dart  test_util.dart
codegen/: pubspec.yaml
codegen/lib/: np_codegen.dart
codegen_build/: build.yaml  pubspec.yaml
codegen_build/lib/: builder.dart
codegen_build/test/: drift_table_sort_test.dart  np_subject_accessor_test.dart  util.dart
np_android_core/: build.gradle
np_api/: pubspec.yaml
np_api/lib/: np_api.dart
np_async/: pubspec.yaml
np_collection/: pubspec.yaml
np_collection/test/: iterable_extension_test.dart  list_extension_test.dart  list_util_test.dart
np_common/: pubspec.yaml
np_common/lib/: color.dart  exception.dart  localized_string.dart  localized_string.g.dart  object_util.dart  size.dart  try_or_null.dart  type.dart
np_datetime/: pubspec.yaml
np_db/: pubspec.yaml
np_db/test/: util_test.dart
np_db_sqlite/: build.yaml  pubspec.yaml
np_db_sqlite/lib/: np_db_sqlite_compat.dart
np_db_sqlite/test/: converter_test.dart  test_util.dart
np_exiv2/: ffigen.yaml  pubspec.yaml
np_exiv2/android/: build.gradle  settings.gradle
np_exiv2/lib/: np_exiv2.dart
np_exiv2/src/: CMakeLists.txt  log.h  np_exiv2.cpp  np_exiv2.h  reader.cpp  reader.h
np_exiv2_lib/: pubspec.yaml
np_exiv2_lib/android/: build.gradle
np_ffi_image_editor/: ffigen.yaml  pubspec.yaml
np_ffi_image_editor/android/: build.gradle  settings.gradle
np_ffi_image_editor/lib/: np_ffi_image_editor.dart
np_ffi_image_editor/src/: CMakeLists.txt  edit.h  gpupixel_helper.cpp  gpupixel_helper.h  np_ffi_image_editor.cpp  np_ffi_image_editor.h  rgb8_image.h
np_ffi_image_editor/src/edit/: black_point.cpp  black_point.h  brightness.cpp  brightness.h  contrast.cpp  contrast.h  crop.cpp  crop.h  face_reshape.cpp  face_reshape.h  gpupixel_composite.cpp  gpupixel_composite.h  halftone.cpp  halftone.h  orientation.cpp  orientation.h  pixelation.cpp  pixelation.h  posterization.cpp  posterization.h  saturation.cpp  saturation.h  sketch.cpp  sketch.h  tint.cpp  tint.h  toon.cpp  toon.h  warmth.cpp  warmth.h  white_point.cpp  white_point.h
np_geocoder/: l10n.yaml  pubspec.yaml
np_geocoder/lib/: np_geocoder.dart
np_geocoder/test/: reverse_geocoder_test.dart
np_gps_map/: pubspec.yaml
np_gps_map/android/: build.gradle
np_http/: pubspec.yaml
np_image_format_interface/: pubspec.yaml
np_image_format_interface/lib/: np_image_format_interface.dart
np_lints/: pubspec.yaml
np_lints/lib/: np.yaml
np_log/: pubspec.yaml
np_log/lib/: np_log.dart
np_log_annotation/: pubspec.yaml
np_log_build/: build.yaml  pubspec.yaml
np_log_build/lib/: builder.dart
np_log_build/test/: np_log_test.dart
np_login_flow/: pubspec.yaml
np_login_flow/lib/: np_login_flow.dart
np_math/: pubspec.yaml
np_math/test/: num_extension_test.dart
np_platform_image_format_jxl/: pubspec.yaml
np_platform_image_format_jxl/android/: build.gradle  settings.gradle
np_platform_image_format_jxl/ios/: np_platform_image_format_jxl.podspec
np_platform_image_format_jxl/lib/: np_platform_image_format_jxl.dart
np_platform_image_format_jxl/pigeon/: messages.dart
np_platform_image_processor/: pubspec.yaml
np_platform_image_processor/android/: build.gradle
np_platform_local_media/: pubspec.yaml
np_platform_local_media/android/: build.gradle  settings.gradle
np_platform_local_media/lib/: np_platform_local_media.dart
np_platform_local_media/pigeon/: messages.dart
np_platform_lock/: pubspec.yaml
np_platform_lock/android/: build.gradle
np_platform_log/: pubspec.yaml
np_platform_log/android/: build.gradle
np_platform_message_relay/: pubspec.yaml
np_platform_message_relay/android/: build.gradle
np_platform_permission/: pubspec.yaml
np_platform_permission/android/: build.gradle
np_platform_raw_image/: pubspec.yaml
np_platform_raw_image/android/: build.gradle
np_platform_raw_image/lib/: np_platform_raw_image.dart
np_platform_uploader/: pubspec.yaml
np_platform_uploader/android/: build.gradle  settings.gradle
np_platform_uploader/android/src/main/cpp/: CMakeLists.txt  convert_jpg.cpp  convert_jpg.h  convert_jxl.cpp  convert_jxl.h  converter.cpp  converter.h  copy_metadata.cpp  copy_metadata.h  image.h  util.h
np_platform_uploader/lib/: np_platform_uploader.dart
np_platform_uploader/pigeon/: messages.dart
np_platform_util/: pubspec.yaml
np_string/: pubspec.yaml
np_string/test/: ci_string_test.dart
np_ui/: pubspec.yaml
np_ui/lib/: np_ui.dart
np_universal_storage/: pubspec.yaml
plugin/: pubspec.yaml
plugin/android/: build.gradle
plugin/lib/: nc_photos_plugin.dart
(+1104 files in other folders)
